# grafos

./: .gitignore  Avaliacao01.md  README.md  comandos.txt  tarefa.md
aula04/: CMakeLists.txt  grafo_simples.cpp  main.cpp  tarefa.md
aula04/headers/: estrela.h  grafo.h
aula04/output/: grafo.dot  grafo_direcionado.dot  grafo_simples  grafo_simples.dot  grafo_simples_inicial.dot
aula04/playground/: printing.cpp  testes.cpp
aula04/playground/output/: printing
aula04/source/: estrela.cpp  grafo.cpp
aula05/: CMakeLists.txt  main.cpp  tarefa.md
aula05/headers/: busca-profundidade.h
aula05/source/: busca-profundidade.cpp
aula06/: CMakeLists.txt  main.cpp  tarefa.md
aula06/headers/: arvore-largura.h  busca-largura.h
aula06/source/: arvore-largura.cpp  busca-largura.cpp
aula07/: CMakeLists.txt  tarefa.md
aula08/: CMakeLists.txt  main.cpp  tarefa.md
aula08/headers/: busca-largura-digrafo.h  busca-profundidade-digrafo.h
aula08/output/: grafo_dir_bl.dot
aula08/source/: busca-largura-digrafo.cpp  busca-profundidade-digrafo.cpp
final/: Avaliacao01.md  CMakeLists.txt  main.cpp  teste.cpp
final/dados/: DIGRAFO_0.txt  DIGRAFO_1.txt  DIGRAFO_2.txt  DIGRAFO_3.txt  GRAFO_0.txt  GRAFO_1.txt  GRAFO_2.txt  GRAFO_3.txt
final/headers/: DigrafoListaAdj.h  DigrafoListaAdjPonderada.h  DigrafoMatrizAdj.h  DigrafoMatrizInc.h  Grafo.h  GrafoListaAdj.h  GrafoMatrizAdj.h  GrafoMatrizInc.h  arvore-busca.h  arvore-largura.h  arvore_bfs.h  arvore_busca.h  arvore_dfs.h  busca-largura-digrafo.h  busca-largura.h  busca-profundidade-digrafo.h  busca-profundidade.h  conexo.h  digrafo.h  grafo.h
final/source/: DigrafoListaAdj.cpp  DigrafoListaAdjPonderada.cpp  DigrafoMatrizAdj.cpp  DigrafoMatrizInc.cpp  Grafo.cpp  GrafoListaAdj.cpp  GrafoMatrizAdj.cpp  GrafoMatrizInc.cpp  arvore-largura.cpp  arvore_bfs.cpp  arvore_busca.cpp  arvore_dfs.cpp  busca-largura-digrafo.cpp  busca-largura.cpp  busca-profundidade-digrafo.cpp  busca-profundidade.cpp  conexo.cpp  digrafo.cpp  grafo.cpp
unidade2/: CMakeLists.txt  dijkstra.cpp  main.cpp  tarefas.md
unidade2/dados/: DIGRAFO_0.txt  DIGRAFO_BELLMANFORD_0.txt  DIGRAFO_BELLMANFORD_1.txt  DIGRAFO_CHIU.txt  DIGRAFO_CHU.txt  DIGRAFO_CHU_SLIDE.txt  DIGRAFO_DIJKSTRA.txt  DIGRAFO_FLOYD_WARSHALL.txt  DIGRAFO_HIERHOLZER_CICLOS.txt  DIGRAFO_LISTA.txt  GRAFO_0.txt  GRAFO_BORUVKA.txt  GRAFO_CAVALO.txt  GRAFO_DIJKSTRA.txt  GRAFO_HIERHOLZER_CAMINHOS.txt  GRAFO_KRUSKAL.txt  GRAFO_LISTA copy.txt  GRAFO_LISTA.txt  GRAFO_LISTA_ORDER.txt
unidade2/headers/: arvore-minima.h  bellmanford.h  boruvka.h  chuliu.h  dijkstra.h  floyd-warshall.h  hierholzer.h  kruskal.h  prim.h
unidade2/source/: arvore-minima.cpp  bellmanford.cpp  boruvka.cpp  chuliu.cpp  dijkstra.cpp  floyd-warshall.cpp  hierholzer.cpp  kruskal.cpp  prim.cpp
unidade3/: CMakeLists.txt  main.cpp
unidade3/dados/: testes.csv
unidade3/headers/: algoritmo-genetico.h  algoritmo-memetico.h  buscas-locais-testes.h  buscas-locais.h  insercao-mais-barata.h  vizinho-mais-proximo.h
unidade3/resultados/: resultados_evolutivos.txt  resultados_finais.txt  resultados_heuristicas.txt
unidade3/source/: algoritmo-genetico.cpp  algoritmo-memetico.cpp  buscas-locais-testes.cpp  buscas-locais.cpp  insercao-mais-barata.cpp  vizinho-mais-proximo.cpp
